tests/rt/pos/ifc/lclear0.trp
(* positive test; should be ok *)
let val c = raisembox ({alice})    
    val () = lowermbox (c, authority)
in c
end 